Fixed broken css for mapid
Fixed broken css for mapid

--- a/css/styles.css
+++ b/css/styles.css
@@ -239,7 +239,7 @@ nav h1 a {
   top: 2.4em;
   width: 50%;
 }
-.inside #map {
+.inside #mapid {
   background-color: #ccc;
   height: 100%;
   width: 100%;
